Initial commit - Kali System Watchdog

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-venv/
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+
+# Virtual environment
+venv/
+env/
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
